initial completed working version for auth and user modules
